<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cardview"
    android:orientation="vertical"
    android:theme="@style/toolbarTheme"
    app:layout_constraintBottom_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:theme="@style/toolbarTheme"
        android:title=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageBackButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/back_button"
            app:srcCompat="@drawable/arrow_back_24px"
            app:tint="@color/White"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#121212"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/password_manager"
            android:textColor="@color/White"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="128dp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvSiteName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/site_name"
        android:textColor="@color/WhiteTextColor"
        android:textColorHint="@color/hintTextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="username"
        android:background="@drawable/input_field2"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/WhiteTextColor"
        android:textColorHint="@color/hintTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSiteName" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnCopyUsername"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/copy"
        android:src="@drawable/ic_copy"
        android:tint="@color/LightBlueAccent"
        app:layout_constraintBottom_toBottomOf="@+id/usernameEditText"
        app:layout_constraintEnd_toEndOf="@+id/usernameEditText"
        app:layout_constraintTop_toTopOf="@+id/usernameEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:background="@drawable/input_field2"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/WhiteTextColor"
        android:textColorHint="@color/hintTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnCopyPassword"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/copy"
        android:src="@drawable/ic_copy"
        android:tint="@color/LightBlueAccent"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnToggle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/copy"
        android:tint="@color/LightBlueAccent"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
        app:layout_constraintEnd_toStartOf="@+id/btnCopyPassword"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText" />

    <EditText
        android:id="@+id/noteEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="note"
        android:background="@drawable/input_field2"
        android:hint="@string/note"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/WhiteTextColor"
        android:textColorHint="@color/hintTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="11dp"
        android:textColor="@color/AccentOrange"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteEditText"
        tools:visibility="visible" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_background"
        android:text="@string/edit"
        android:theme="@style/MinimalButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteEditText" />

    <Button
        android:id="@+id/deleteBtn_AP"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:text="@string/delete"
        android:theme="@style/MinimalButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editBtn"
        app:layout_constraintTop_toBottomOf="@+id/noteEditText" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:text="@string/save"
        android:theme="@style/MinimalButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/usernameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/sitenameEditBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/edit"
        android:src="@drawable/ic_edit"
        android:tint="@color/LightBlueAccent"
        app:layout_constraintBottom_toTopOf="@+id/usernameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvSiteName"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintVertical_bias="0.0">

    </androidx.appcompat.widget.AppCompatImageButton>

</androidx.constraintlayout.widget.ConstraintLayout>