<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F8FA"
    tools:context=".SignUp">

    <!-- Top Black Background with Logo -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBackground"
        android:layout_width="0dp"
        android:layout_height="293dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Text View (Logo Replacement) -->
        <TextView
            android:id="@+id/logoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_manager"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.123" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Sign Up Form Container -->
    <LinearLayout
        android:id="@+id/signUpForm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/curved_background"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBackground"
        app:layout_constraintVertical_bias="1.0">

        <!-- Sign Up Text -->
        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_up"
            android:theme="@style/MinimalTextViewStyle" />

        <!-- Username Field -->
        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="username"
            android:background="@drawable/input_field2"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/WhiteTextColor"
            android:textColorHint="@color/hintTextColor"
            android:textSize="16sp" />

        <!-- Email Field -->
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="username"
            android:background="@drawable/input_field2"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/WhiteTextColor"
            android:textColorHint="@color/hintTextColor"
            android:textSize="16sp" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="username"
            android:background="@drawable/input_field2"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/WhiteTextColor"
            android:textColorHint="@color/hintTextColor"
            android:textSize="16sp" />

        <!-- Confirm Password Field -->
        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="username"
            android:background="@drawable/input_field2"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/WhiteTextColor"
            android:textColorHint="@color/hintTextColor"
            android:textSize="16sp" />

        <!-- Error Text View -->
        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="#FF0000"
            android:textSize="14sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <!-- Sign Up Button -->

        <!-- Login Text -->
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:theme="@style/MinimalButtonStyle"/>

        <TextView
            android:id="@+id/BackToLoginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/GreyTextColor"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
