<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grad_background"
        android:padding="12dp">


        <TextView
            android:id="@+id/tvSiteName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/site_name"
            android:textColor="@color/WhiteTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btnCopy"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/username_example_com"
            android:textColor="@color/GreyTextColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCopy"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSiteName"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/timestamp_tv"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="Just now"
            android:textAlignment="viewStart"
            android:textColor="@color/GreyTextColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/starred_btn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnCopy"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/copy"
            android:src="@drawable/content_copy_48px"
            android:tint="@color/LightBlueAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/starred_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="Starred"
            android:src="@drawable/star_24px"
            android:tint="@color/LightBlueAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteBtn" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/deleteBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/edit"
            android:src="@drawable/delete_24px"
            android:tint="#E45656"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:alpha="0.2"
            android:background="@color/GreyTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
