<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/grad_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:theme="@style/toolbarTheme"
        android:title=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_imgbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:contentDescription="@string/back_button"
            app:srcCompat="@drawable/arrow_back_24px"
            app:tint="@color/White" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/password_manager"
            android:textColor="@color/White"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/search_et"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/input_field2"
        android:drawableStart="@drawable/search_24px"
        android:drawablePadding="8dp"
        android:drawableTint="@color/LightBlueAccent"
        android:hint="@string/search"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/WhiteTextColor"
        android:textColorHint="@color/hintTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/deletedpasswordrecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/grad_background"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_et"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>